見出しの変更

--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
             <ul class="row">
                 <li class="col-lg-4 col-xs-12 mb-5" id="head01">
                     <img src="images/img1.jpg" alt="" class="img-thumbnail rounded-circle d-block mx-auto">
-                    <h2>見出し01</h2>
+                    <h2>リストタイトル01</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae beatae optio, dolore amet, ipsum sunt quasi quis soluta sed sint voluptatem inventore. Eveniet fuga corporis dolore cum libero exercitationem ex ducimus quidem consectetur non omnis, vel ullam? Aperiam ea quibusdam eos unde repudiandae, dolor possimus aut velit a nemo perferendis.</p>
                     <a href="" class="btn btn-primary me-2">詳細</a><a href="" class="btn btn-warning">公式</a>
                 </li>
                 <li class="col-lg-4 col-xs-12 mb-5" id="head02">
                     <img src="images/img2.jpg" alt="" class="img-thumbnail rounded-circle d-block mx-auto">
-                    <h2>見出し02</h2>
+                    <h2>リストタイトル02</h2>
                     <p>Doloribus, debitis. Distinctio, provident temporibus. Mollitia aliquid exercitationem cumque corporis unde ducimus repudiandae, non voluptatem, impedit voluptas ea dicta, debitis quos. Fugit consectetur corrupti ea fugiat aliquam facilis, nobis ipsum officiis natus. Illo itaque ut nemo, non omnis alias aperiam numquam consequatur sed rerum mollitia molestiae ad, voluptas unde. Debitis.</p>
                     <a href="" class="btn btn-primary me-2">詳細</a><a href="" class="btn btn-warning">公式</a>
                 </li>
